# syn2real

./: .gitignore  .template-env  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  docker-compose.yaml  entrypoint.sh  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/actions/create-or-update-comment/: action.yml
.github/workflows/: build-docker.yml  clean-registry.yml  release.yml  verify-pr.yml
docs/: README.md  SOTA.md  acceleration.md  controlnet_finetuning.md  general_approach.md
mlflow/: Dockerfile  auto_log_exp_mlflow.py  pyproject.toml  pyproject_mlflow.toml  requirements_mlflow.txt
mlflow/tests/: test_auto_log_exp_mlflow.py
src/: README.md
src/baseline_model/: Dockerfile  config.py  data_tools.py  eval_metrics_tools.py  main.py  model_tools.py  pyproject.toml  pyproject_baseline.toml  requirements_baseline.txt
src/baseline_model/test/: data_tools_test.py  model_tools_test.py
src/baseline_model/tests/: test_data_tools.py  test_eval_metrics_tools.py  test_model_tools.py
src/blip_caption/: Dockerfile  config.py  main.py  pyproject.toml  pyproject_blip.toml  requirements_blip.txt  utils.py
src/blip_caption/tests/: test_utils.py
src/controlnet_finetuning/: Dockerfile  config.yml  dataset.py  evaluate.py  pyproject.toml  pyproject_controlnet.toml  requirements_controlnet.txt  train.py  train_config.py
src/controlnet_finetuning/ControlNet/: README.md
src/controlnet_finetuning/tests/: test_dataset.py
src/controlnet_sdxl/: Dockerfile  active_train.py  config.yml  dataset.py  infer.sh  inference.py  launch.sh  log.py  model.py  prepare_new_dataset.py  pyproject.toml  pyproject_controlnet_sdxl  requirements_add.txt  segment.py  train_controlnet_sdxl.py  train_sdxl_unlocked.py
src/controlnet_sdxl/diffusers/: README.md
src/controlnet_sdxl/tests/: test_active_train.py  test_dataset.py  test_inference.py  test_log.py  test_model.py  test_prepare_new_dataset.py  test_segment.py  test_train_controlnet_sdxl.py  test_train_sdxl_unlocked.py
src/controlnet_sdxl/tests/repo_folder/: README.md
src/deepfloyd_scaler/: Dockerfile  config.yml  pyproject.toml  pyproject_deepf.toml  requirements_deepf.txt  scale.py
src/deepfloyd_scaler/tests/: test_scale.py
src/gan/: Dockerfile  cyclegan_turbo.py  dino_struct.py  entrypoint.sh  infer.sh  inference.py  launch.sh  model.py  pyproject.toml  pyproject_gan.toml  requirements.txt  train_cyclegan.py  training_utils.py
src/gan/tests/: test_cyclegan_turbo.py  test_dino_struct.py  test_inference.py  test_model.py  test_train_cyclegan.py  test_training_utils.py
src/gan/tests/checkpoints/: model.ckpt
src/model_eval/: Dockerfile  arniqa_embeddings.py  clip_embeddings.py  config.yml  labels.py  launch.sh  mmd.py  pyproject.toml  pyproject_model_eval.toml  requirements_add.txt  train_deeplab.py  train_segmenter.py
src/model_eval/tests/: test_arniqa_embeddings.py  test_clip_embeddings.py  test_labels.py  test_mmd.py  test_train_deeplab.py  test_train_segmenter.py
