[tool.poetry]
name = "baseline_model"
version = "0.1.0"
description = "Run the benchmarking process by training the baseline model on synthetic datasets and evaluating him on real datasets"
authors = ["Anaïs Druart <anais.druart@atos.net>"]

[tool.poetry.dependencies]
python = "^3.10" 
opencv-contrib-python = "~4.9.0"
opencv-python = "~4.9.0"
numpy = "~1.26.4"
pillow = "~10.3.0"
matplotlib = "~3.8.4"
timm = "~0.9.16"
diffusers = "~0.26"
accelerate = "~0.30.1"
pandas = "~2.2.2"
scikit-image = "~0.23.2"
scikit-learn = "~1.5.0"
scipy = "~1.13.1"
safetensors = "~0.4.3"
transformers = "~4.41.1"
jupyterlab = "~4.2.1"
controlnet-aux = "~0.0.7"
xformers = "~0.0.26"
seaborn = "~0.13.2"
umap-learn = "~0.5.6"

[tool.poetry.dev-dependencies]
pytest = "~7.0.1"
pytest-mock = "~3.14.0"
pytest-testdox = "~3.1.0"
pytest-cov = "~5.0.0"
pytest-sugar = "~1.0.0"
pytest-clarity = "~1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
