[project]
name = "blip-caption"
version = "0.1.0"
description = "Automated caption generation of a given dataset"
authors = [
    {name = "Anaïs Druart",email = "anais.druart@atos.net"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "opencv-contrib-python (>=4.9.0,<4.10.0)",
    "opencv-python (>=4.9.0,<4.10.0)",
    "numpy (>=1.26.4,<1.27.0)",
    "pillow (>=10.3.0,<10.4.0)",
    "matplotlib (>=3.8.4,<3.9.0)",
    "timm (>=0.9.16,<0.10.0)",
    "accelerate (>=0.30.1,<0.31.0)",
    "pandas (>=2.2.2,<2.3.0)",
    "scikit-image (>=0.23.2,<0.24.0)",
    "scikit-learn (>=1.5.0,<1.6.0)",
    "scipy (>=1.13.1,<1.14.0)",
    "safetensors (>=0.4.3,<0.5.0)",
    "transformers (>=4.41.1,<4.42.0)",
    "jupyterlab (>=4.2.1,<4.3.0)",
    "xformers (>=0.0.26,<0.1.0)",
    "seaborn (>=0.13.2, <0.14)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "~7.0.1"
pytest-mock = "~3.14.0"
pytest-testdox = "~3.1.0"
pytest-cov = "~5.0.0"
pytest-sugar = "~1.0.0"
pytest-clarity = "~1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
