[project]
name = "controlnet-finetuning"
version = "0.1.0"
description = "Pull the controlnet model and train it"
authors = [
    {name = "Anaïs Druart", email = "anais.druart@atos.net"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "gradio (>=3.16.2,<3.17.0)", 
    "opencv-contrib-python (>=4.9.0,<4.10.0)",
    "albumentations (>=1.3.0,<1.4.0)",
    "opencv-python (>=4.9.0,<4.10.0)",
    "imageio (>=2.9.0,<2.10.0)",
    "imageio-ffmpeg (>=0.4.2,<0.5.0)",
    "pytorch-lightning (>=1.5.0,<1.6.0)",
    "omegaconf (>=2.1.1,<2.2.0)",
    "test-tube (>=0.7.5,<0.8.0)",
    "pillow (>=10.3.0,<10.4.0)",
    "timm (>=0.6.12,<0.7.0)",
    "safetensors (>=0.2.7,<0.3.0)",
    "transformers (>=4.19.2,<4.20.0)",
    "jupyterlab (>=4.2.1,<4.3.0)",
    "einops (>=0.3.0,<0.4.0)",
    "webdataset (>=0.2.5,<0.3.0)",
    "kornia (>=0.6,<0.7)",
    "open_clip_torch (>=2.0.2,<2.1.0)",
    "invisible-watermark (>=0.1.5,<0.2.0)",
    "streamlit-drawable-canvas (>=0.8.0,<0.9.0)",
    "torchmetrics (>=0.6.0,<0.7.0)",
    "addict (>=2.4.0,<2.5.0)",
    "yapf (>=0.32.0,<0.33.0)",
    "prettytable (>=3.6.0,<3.7.0)",
    "basicsr (>=1.4.2,<1.5.0)",
    "streamlit (>=1.12.1,<1.13.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "~7.0.1"
pytest-mock = "~3.14.0"
pytest-testdox = "~3.1.0"
pytest-cov = "~5.0.0"
pytest-sugar = "~1.0.0"
pytest-clarity = "~1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"