[project]
name = "controlnet-sdxl"
version = "0.1.0"
description = "Finetune the controlnet model"
authors = [
    {name = "Anaïs Druart",email = "anais.druart@atos.net"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "accelerate (>=1.8.1,<1.9.0)",
    "torch (>=2.7.1,<2.8.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "diffusers (>=0.34.0,<0.35.0)",
    "datasets (>=4.0.0,<4.1.0)",
    "bitsandbytes (>=0.43.1,<0.44.0)",
    "opencv-contrib-python (>=4.9.0,<4.10.0)",
    "mlflow (==2.14.2)",
    "umap-learn (>=0.5.6,<0.6.0)",
    "transformers (>=4.53.2,<4.54.0)",
    "segment-anything (>=1.0,<1.1)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "~7.0.1"
pytest-mock = "~3.14.0"
pytest-testdox = "~3.1.0"
pytest-cov = "~5.0.0"
pytest-sugar = "~1.0.0"
pytest-clarity = "~1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
