[tool.poetry]
name = "deepfloyd_scaler"
version = "0.1.0"
description = ""
authors = ["Anaïs Druart <anais.druart@atos.net>"]

[tool.poetry.dependencies]
python = "^3.10"  
numpy = "~1.26.4"
matplotlib = "~3.9.1"
jupyterlab = "~4.2.3"
ipywidgets = "~8.1.3"
ipykernel = "~6.29.5"
huggingface_hub = ">=0.13.2"
Pillow = "~10.2.0"
diffusers = "~0.29.2"
transformers = "~4.42.4"
safetensors = "~0.4.3"
sentencepiece = "~0.2.0"
accelerate = "~0.32.1"
bitsandbytes = "~0.43.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
