[project]
name = "deepfloyd-scaler"
version = "0.1.0"
description = ""
authors = [
    {name = "Anaïs Druart",email = "anais.druart@atos.net"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "numpy (>=1.26.4,<1.27.0)",
    "matplotlib (>=3.9.1,<3.10.0)",
    "jupyterlab (>=4.2.3,<4.3.0)",
    "ipywidgets (>=8.1.3,<8.2.0)",
    "ipykernel (>=6.29.5,<6.30.0)",
    "huggingface_hub (>=0.13.2)",
    "Pillow (>=10.2.0,<10.3.0)",
    "diffusers (>=0.29.2,<0.30.0)",
    "transformers (>=4.42.4,<4.43.0)",
    "safetensors (>=0.4.3,<0.5.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "accelerate (>=0.32.1,<0.33.0)",
    "bitsandbytes (>=0.43.1,<0.44.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
