[project]
name = "gan"
version = "0.1.0"
description = "Train and Infer data using CycleGan"
authors = [
    {name = "Anaïs Druart",email = "anais.druart@atos.net"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "clip @ git+https://github.com/openai/CLIP.git",
    "einops (>=0.6.1)",
    "numpy (>=1.24.4)",
    "open-clip-torch (>=2.20.0)",
    "opencv-python (==4.6.0.66)",
    "pillow (>=9.5.0)",
    "scipy (==1.11.1)",
    "timm (>=0.9.2)",
    "tokenizers (>=0.21.2,<0.22.0)",
    "torch (>=2.0.0,<3.0.0)",
    "torchaudio (>=2.0.2)",
    "torchdata (>=0.6.0,<0.7.0)",
    "torchmetrics (>=1.0.1)",
    "torchvision (>=0.15.0,<0.16.0)",
    "tqdm (>=4.65.0)",
    "transformers (==4.35.2)",
    "urllib3 (>=1.25.4,<1.27)",
    "xformers (>=0.0.20)",
    "streamlit-keyup (==0.2.0)",
    "lpips (>=0.1.4,<0.2.0)",
    "clean-fid (>=0.1.35,<0.2.0)",
    "peft (>=0.16.0,<0.17.0)",
    "dominate (>=2.9.1,<3.0.0)",
    "diffusers (==0.25.1)",
    "gradio (==3.43.1)",
    "vision-aided-loss (>=0.1.0,<0.2.0)",
    "wandb (>=0.21.0,<0.22.0)",
    "bitsandbytes (>=0.46.1,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
